--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                     <a href="index.html" class="hover:text-green-600 transition-colors duration-300">Home</a>
                                 </li>
                                 <li class="dropdown">
-                                    <a href="products.html" class="hover:text-green-600 transition-colors duration-300">Products</a>
+                                    <a href="product.html" class="hover:text-green-600 transition-colors duration-300">Products</a>
                                 </li>
                                 <li class="dropdown">
                                     <a href="gallery.html" class="hover:text-green-600 transition-colors duration-300">Gallery</a>
