COntent uploaded and about page redisigned

--- a/gallery.html
+++ b/gallery.html
@@ -274,13 +274,7 @@
         <div class="site-footer_bottom">
             <div class="container">
                 <div class="site-footer_bottom_copyright">
-                    <p>@ All copyright 2020, <a href="#">Layerdrops.com</a></p>
-                </div>
-                <div class="site-footer_bottom_menu">
-                    <ul class="list-unstyled">
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Use</a></li>
-                    </ul>
+                    <p>© 2025 Earth Asia Agro. All Rights Reserved.</p>
                 </div>
             </div>
         </div>
