--- a/index.html
+++ b/index.html
@@ -602,16 +602,16 @@
                                     <img src="assets/images/resources/leaf.png" alt="">
                                 </div>
                             </div>
-                            <div class="growing_product_text">
+                            <div class="growing_product_text ">
                                 <p>At Earth Asia Agro, we believe that food should be fresh, natural, and trustworthy. Established on December 10, 2024, we are an agro-based livestock and cattle farm located in Abdar Bidhai, Kaoraid Union, Sreepur, Gazipur, Bangladesh. <br> <br>
 
-                                Our farm is dedicated to producing premium quality beef, raw cow milk, dairy products, farm-fresh eggs, and agricultural products. Every product we offer is raised and produced with care, responsibility, and a commitment to quality. We bring wholesome, farm-direct goodness straight to your family’s table. <br> <br>
+                                Our farm is dedicated to producing premium quality beef, raw cow milk, dairy products, farm-fresh eggs, and agricultural products. Every product we offer is raised and produced with care, responsibility, and a commitment to quality. We bring wholesome, farm-direct goodness straight to your family's table. <br> <br>
 
                                 With a focus on ethical practices, natural farming, and hygienic processing, Earth Asia Agro stands for purity, freshness, and trust.
                                 </p>
                             </div>
-                            <div class="progress-levels">
-                                
+
+                            <!-- <div class="progress-levels">
                                 <div class="progress-box">
                                     <div class="inner count-box">
                                         <div class="text">Agriculture</div>
@@ -641,7 +641,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
+
                         </div>
                     </div>
                 </div>
@@ -851,13 +852,7 @@
         <div class="site-footer_bottom">
             <div class="container">
                 <div class="site-footer_bottom_copyright">
-                    <p>@ All copyright 2020, <a href="#">Layerdrops.com</a></p>
-                </div>
-                <div class="site-footer_bottom_menu">
-                    <ul class="list-unstyled">
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Use</a></li>
-                    </ul>
+                    <p>© 2025 Earth Asia Agro. All Rights Reserved.</p>
                 </div>
             </div>
         </div>
