--- a/product.html
+++ b/product.html
@@ -205,7 +205,7 @@
                             </div>
                             <!--End sidebar categories Box-->
                             <!--Start single sidebar-->
-                            <div class="single-sidebar wow fadeInUp animated" data-wow-delay="0.5s"
+                            <!-- <div class="single-sidebar wow fadeInUp animated" data-wow-delay="0.5s"
                                 data-wow-duration="1200ms">
                                 <div class="top_sellers">
                                     <div class="title">
@@ -242,7 +242,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                            </div>
+                            </div> -->
                             <!--End single sidebar-->
 
                         </div>
@@ -277,7 +277,7 @@
                                     <div class="col-xl-4 col-lg-4 col-md-6">
                                         <div class="all_products_single text-center">
                                             <div class="all_product_item_image">
-                                                <img src="assets/images/shop/shop_product_1.jpg" alt="">
+                                                <img src="assets/images/shop/shop_product_1.jpeg" alt="">
                                                 <div class="all_product_hover">
                                                     <div class="all_product_icon">
                                                         <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank" style="background: #000; color: #fff; padding: 10px 20px; border-radius: 5px; text-decoration: none;">Learn More</a>
@@ -291,7 +291,7 @@
                                     <div class="col-xl-4 col-lg-4 col-md-6">
                                         <div class="all_products_single text-center">
                                             <div class="all_product_item_image">
-                                                <img src="assets/images/shop/shop_product_2.jpg" alt="">
+                                                <img src="assets/images/shop/shop_product_2.jpeg" alt="">
                                                 <div class="all_product_hover">
                                                     <div class="all_product_icon">
                                                         <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank" style="background: #000; color: #fff; padding: 10px 20px; border-radius: 5px; text-decoration: none;">Learn More</a>
@@ -305,7 +305,7 @@
                                     <div class="col-xl-4 col-lg-4 col-md-6">
                                         <div class="all_products_single text-center">
                                             <div class="all_product_item_image">
-                                                <img src="assets/images/shop/shop_product_3.jpg" alt="">
+                                                <img src="assets/images/shop/shop_product_3.png" alt="">
                                                 <div class="all_product_hover">
                                                     <div class="all_product_icon">
                                                         <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank" style="background: #000; color: #fff; padding: 10px 20px; border-radius: 5px; text-decoration: none;">Learn More</a>
@@ -319,7 +319,7 @@
                                     <div class="col-xl-4 col-lg-4 col-md-6">
                                         <div class="all_products_single text-center">
                                             <div class="all_product_item_image">
-                                                <img src="assets/images/shop/shop_product_4.jpg" alt="">
+                                                <img src="assets/images/shop/shop_product_4.png" alt="">
                                                 <div class="all_product_hover">
                                                     <div class="all_product_icon">
                                                         <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank" style="background: #000; color: #fff; padding: 10px 20px; border-radius: 5px; text-decoration: none;">Learn More</a>
@@ -333,7 +333,7 @@
                                     <div class="col-xl-4 col-lg-4 col-md-6">
                                         <div class="all_products_single text-center">
                                             <div class="all_product_item_image">
-                                                <img src="assets/images/shop/shop_product_5.jpg" alt="">
+                                                <img src="assets/images/shop/shop_product_5.png" alt="">
                                                 <div class="all_product_hover">
                                                     <div class="all_product_icon">
                                                         <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank" style="background: #000; color: #fff; padding: 10px 20px; border-radius: 5px; text-decoration: none;">Learn More</a>
@@ -347,7 +347,7 @@
                                     <div class="col-xl-4 col-lg-4 col-md-6">
                                         <div class="all_products_single text-center">
                                             <div class="all_product_item_image">
-                                                <img src="assets/images/shop/shop_product_6.jpg" alt="">
+                                                <img src="assets/images/shop/shop_product_6.png" alt="">
                                                 <div class="all_product_hover">
                                                     <div class="all_product_icon">
                                                         <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank" style="background: #000; color: #fff; padding: 10px 20px; border-radius: 5px; text-decoration: none;">Learn More</a>
@@ -356,48 +356,6 @@
                                             </div>
                                             <h4><a href="product-detail.html">Split kiwi</a></h4>
                                             <p>$5.98</p>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-4 col-lg-4 col-md-6">
-                                        <div class="all_products_single text-center">
-                                            <div class="all_product_item_image">
-                                                <img src="assets/images/shop/shop_product_7.jpg" alt="">
-                                                <div class="all_product_hover">
-                                                    <div class="all_product_icon">
-                                                        <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank" style="background: #000; color: #fff; padding: 10px 20px; border-radius: 5px; text-decoration: none;">Learn More</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <h4><a href="product-detail.html">Oranges</a></h4>
-                                            <p>$3.99</p>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-4 col-lg-4 col-md-6">
-                                        <div class="all_products_single text-center">
-                                            <div class="all_product_item_image">
-                                                <img src="assets/images/shop/shop_product_8.jpg" alt="">
-                                                <div class="all_product_hover">
-                                                    <div class="all_product_icon">
-                                                        <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank" style="background: #000; color: #fff; padding: 10px 20px; border-radius: 5px; text-decoration: none;">Learn More</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <h4><a href="product-detail.html">Chili pepper</a></h4>
-                                            <p>$4.98</p>
-                                        </div>
-                                    </div>
-                                    <div class="col-xl-4 col-lg-4 col-md-6">
-                                        <div class="all_products_single text-center">
-                                            <div class="all_product_item_image">
-                                                <img src="assets/images/shop/shop_product_9.jpg" alt="">
-                                                <div class="all_product_hover">
-                                                    <div class="all_product_icon">
-                                                        <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank" style="background: #000; color: #fff; padding: 10px 20px; border-radius: 5px; text-decoration: none;">Learn More</a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <h4><a href="product-detail.html">lemons</a></h4>
-                                            <p>$6.00</p>
                                         </div>
                                     </div>
                                 </div>
@@ -467,13 +425,7 @@
         <div class="site-footer_bottom">
             <div class="container">
                 <div class="site-footer_bottom_copyright">
-                    <p>@ All copyright 2020, <a href="#">Layerdrops.com</a></p>
-                </div>
-                <div class="site-footer_bottom_menu">
-                    <ul class="list-unstyled">
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Use</a></li>
-                    </ul>
+                    <p>© 2025 Earth Asia Agro. All Rights Reserved.</p>
                 </div>
             </div>
         </div>
