--- a/about.html
+++ b/about.html
@@ -239,6 +239,42 @@
             </div>
         </section>
 
+        <section class="service_one bg-gray-50">
+            <div class="container">
+                <div class="block-title text-center">
+                    <p>Our Vision & Mission</p>
+                    <h3>Building a Sustainable Future</h3>
+                    <div class="leaf">
+                        <img src="assets/images/resources/leaf.png" alt="">
+                    </div>
+                </div>
+                <div class="row d-flex">
+                    <div class="col-xl-6 col-lg-6 col-md-12 d-flex">
+                        <div class="service_1_single wow fadeInUp h-100 d-flex flex-column">
+                            <div class="content flex-grow-1">
+                                <h3>Our Vision</h3>
+                                <p>To become a trusted leader in Bangladesh's agricultural sector by providing fresh, high-quality, and responsibly sourced farm products for every household. We envision a future where people choose farm-direct, natural food for a healthier life.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 col-lg-6 col-md-12 d-flex">
+                        <div class="service_1_single wow fadeInUp h-100 d-flex flex-column" data-wow-delay="300ms">
+                            <div class="content flex-grow-1">
+                                <h3>Our Mission</h3>
+                                <ul class="list-unstyled mt-3">
+                                    <li class="mb-2">• To deliver pure, fresh, and nutritious livestock, meat, milk, eggs, and agricultural products directly to consumers.</li>
+                                    <li class="mb-2">• To build a brand rooted in trust, transparency, and sustainability.</li>
+                                    <li class="mb-2">• To practice ethical farming and ensure animal welfare while maintaining the highest hygiene standards.</li>
+                                    <li class="mb-2">• To empower local communities through employment and economic growth.</li>
+                                    <li>• To continuously grow and expand, offering more products and services to meet the evolving needs of our customers.</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="cta-one" style="background-image: url(assets/images/resources/cta_one_bg-1.jpg)">
             <div class="container">
                 <div class="row">
@@ -298,11 +334,13 @@
                             <div class="footer-widget_contact">
                                 <p>Abdar Bidhai, Kaoraid Union,<br>Sreepur, Gazipur, Bangladesh</p>
                                 <a href="mailto:earthasiaagro@gmail.com">earthasiaagro@gmail.com</a><br>
-                                <a href="tel:+8801820820878">+880 1820-820878</a>
+                                <a href="tel:+8801820820878">+880 1820-820878</a><br>
+                                <a href="https://wa.me/+8801951252702">WhatsApp: +880 1951-252702</a>
                                 <div class="site-footer__social">
-                                    <a href="#"><i class="fab fa-facebook-square"></i></a>
+                                    <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank"><i class="fab fa-facebook-square"></i></a>
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                     <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://wa.me/+8801951252702"><i class="fab fa-whatsapp"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -339,14 +377,16 @@
             </nav>
             <div class="side-menu__sep"></div><!-- /.side-menu__sep -->
             <div class="side-menu__content">
-                <p><a href="mailto:earthasiaagro@gmail.com">earthasiaagro@gmail.com</a> <br> <a href="tel:+8801820820878">+880 1820-820878</a></p>
+                <p><a href="mailto:earthasiaagro@gmail.com">earthasiaagro@gmail.com</a> <br> 
+                <a href="tel:+8801820820878">+880 1820-820878</a> <br>
+                <a href="https://wa.me/+8801951252702">WhatsApp: +880 1951-252702</a></p>
                 <div class="side-menu__social">
-                    <a href="#"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank"><i class="fab fa-facebook-square"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
+                    <a href="https://wa.me/+8801951252702"><i class="fab fa-whatsapp"></i></a>
                 </div>
-            </div><!-- /.side-menu__content -->
+            </div>
         </div><!-- /.side-menu__block-inner -->
     </div><!-- /.side-menu__block -->
 
