--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
                             </a>
                         </div>
                         <div class="main-nav__main-navigation mx-auto">
-                            <ul class="main-nav__navigation-box flex justify-center space-x-8">
+                            <ul class="main-nav__navigation-box flex md:flex-row flex-col justify-center md:space-x-8 space-x-0 space-y-4 md:space-y-0">
                                 <li class="dropdown">
                                     <a href="index.html" class="hover:text-green-600 transition-colors duration-300">Home</a>
                                 </li>
@@ -173,8 +173,8 @@
                 <div class="block-title text-center">
                     <p>Our Values</p>
                     <h3>What Sets Us Apart</h3>
-                    <div class="leaf">
-                        <img src="assets/images/resources/leaf.png" alt="">
+                    <div class="leaf" style="text-align: center;">
+                        <img src="assets/images/resources/leaf.png" alt="" style="margin: 0 auto;">
                     </div>
                 </div>
                 <div class="row">
