--- a/index.html
+++ b/index.html
@@ -80,14 +80,12 @@
                     <div class="container clearfix flex justify-between items-center">
                         <!-- Brand and toggle get grouped for better mobile display -->
                         <div class="main-nav__left flex items-center gap-4">
-                            <a href="#" class="main-nav__search search-popup__toggler"><i
-                                    class="icon-magnifying-glass"></i></a>
                             <a href="#" class="side-menu__toggler">
                                 <i class="fa fa-bars"></i>
                             </a>
                         </div>
                         <div class="main-nav__main-navigation mx-auto">
-                            <ul class="main-nav__navigation-box flex justify-center space-x-8">
+                            <ul class="main-nav__navigation-box flex md:flex-row flex-col justify-center md:space-x-8 space-x-0 space-y-4 md:space-y-0">
                                 <li class="dropdown current">
                                     <a href="index.html" class="hover:text-green-600 transition-colors duration-300">Home</a>
                                 </li>
@@ -106,13 +104,7 @@
                             </ul>
                         </div><!-- /.navbar-collapse -->
 
-                        <div class="main-nav__right">
-                            <div class="icon_cart_box">
-                                <a href="cart.html">
-                                    <span class="icon-shopping-cart"></span>
-                                </a>
-                            </div>
-                        </div>
+
                     </div>
                 </nav>
             </header>
@@ -148,8 +140,8 @@
                         <div class="content-box">
                             <div class="content">
                                 <div class="inner">
-                                    <div class="sub-title">The best Agriculture products</div>
-                                    <h1>Welcome to<br> agriculture Form</h1>
+                                    <div class="sub-title">Bringing You the Best of Nature.</div>
+                                    <h1>Welcome to<br> Earth Asia Agro</h1>
                                     <div class="link-box">
                                         <a href="about.html" class="thm-btn hover:bg-green-600 transition-colors duration-300">Discover More</a>
                                     </div>
@@ -166,8 +158,8 @@
                         <div class="content-box">
                             <div class="content">
                                 <div class="inner">
-                                    <div class="sub-title">The best Agriculture products</div>
-                                    <h1>Welcome to<br> agriculture Form</h1>
+                                    <div class="sub-title">Bringing You the Best of Nature.</div>
+                                    <h1>Welcome to<br> Earth Asia Agro</h1>
                                     <div class="link-box">
                                         <a href="about.html" class="thm-btn hover:bg-green-600 transition-colors duration-300">Discover More</a>
                                     </div>
@@ -309,277 +301,6 @@
             </div>
         </section>
 
-        <!-- <div class="brand-one">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-12">
-                        <div class="brand-one-carousel owl-carousel">
-                            <div class="single_brand_item">
-                                <a href="#"><img src="assets/images/resources/brand-1-1.png" alt="brand"></a>
-                            </div>
-                            <div class="single_brand_item">
-                                <a href="#"><img src="assets/images/resources/brand-1-2.png" alt="brand"></a>
-                            </div>
-                            <div class="single_brand_item">
-                                <a href="#"><img src="assets/images/resources/brand-1-3.png" alt="brand"></a>
-                            </div>
-                            <div class="single_brand_item">
-                                <a href="#"><img src="assets/images/resources/brand-1-4.png" alt="brand"></a>
-                            </div>
-                            <div class="single_brand_item">
-                                <a href="#"><img src="assets/images/resources/brand-1-5.png" alt="brand"></a>
-                            </div>
-                            <div class="single_brand_item">
-                                <a href="#"><img src="assets/images/resources/brand-1-1.png" alt="brand"></a>
-                            </div>
-                            <div class="single_brand_item">
-                                <a href="#"><img src="assets/images/resources/brand-1-2.png" alt="brand"></a>
-                            </div>
-                            <div class="single_brand_item">
-                                <a href="#"><img src="assets/images/resources/brand-1-3.png" alt="brand"></a>
-                            </div>
-                            <div class="single_brand_item">
-                                <a href="#"><img src="assets/images/resources/brand-1-4.png" alt="brand"></a>
-                            </div>
-                            <div class="single_brand_item">
-                                <a href="#"><img src="assets/images/resources/brand-1-5.png" alt="brand"></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-
-        <!-- <section class="featured-one">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-6 wow slideInLeft" data-wow-delay="100ms">
-                        <div class="single_featured_box">
-                            <img src="assets/images/resources/featured-leaf.png" alt=""><span>We Sale Best Agriculture
-                                Products</span><img src="assets/images/resources/featured-leaf.png" alt="">
-                        </div>
-                    </div>
-                    <div class="col-xl-6 wow slideInRight" data-wow-delay="100ms">
-                        <div class="single_featured_box">
-                            <img src="assets/images/resources/featured-leaf.png" alt=""><span>We've 40 years experience
-                                in field</span><img src="assets/images/resources/featured-leaf.png" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-
-        <!-- <section class="video-one" style="background-image:url(assets/images/resources/video-bg-1.jpg);">
-            <div class="container text-center">
-                <a href="https://www.youtube.com/watch?v=i9E_Blai8vk" class="video-one__btn video-popup"><i
-                        class="fa fa-play"></i></a>
-                <p>Modern agriculture types</p>
-                <h3>Agriculture matters to the<br>future of development</h3>
-            </div>
-        </section> -->
-
-        <!-- <section class="testimonials-one">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-6 col-lg-6">
-                        <div class="testimonials_one_left">
-                            <div class="block-title text-left">
-                                <p>testimonails</p>
-                                <h3>What our customers are<br>talking about</h3>
-                                <div class="leaf">
-                                    <img src="assets/images/resources/leaf.png" alt="">
-                                </div>
-                            </div>
-                            <div class="testimonials_one_text">
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                                    suffered alteration in some form, by injected humour, or randomised words which
-                                    don't look even slightly believable.</p>
-                            </div>
-                            <div class="project_counted wow fadeInUp" data-wow-delay="300ms">
-                                <div class="icon_box">
-                                    <span class="icon-farmer"></span>
-                                </div>
-                                <div class="project-content">
-                                    <h3 class="counter">4,850000</h3>
-                                    <p>Agriculture projects are completed</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-6 col-lg-6">
-                        <div class="testimonials_one_content">
-                            <div class="testimonials_one_carousel owl-theme owl-carousel">
-                                <div class="testimonials_one_single_item">
-                                    <div class="text">
-                                        <p>This is due to their excellent service, and augue homero consectetuer in nam.
-                                            Eu quo laoreet propriae, malis exerci habemus has vocent persius eum ea.</p>
-                                    </div>
-                                    <div class="client_thumbnail">
-                                        <div class="client_img">
-                                            <img src="assets/images/testimonials/testimonial-1-img-1.png"
-                                                alt="testimonial1-img">
-                                        </div>
-                                        <div class="client_title">
-                                            <h4>Kevin Hardson</h4>
-                                            <p>Customer</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="testimonials_one_single_item">
-                                    <div class="text">
-                                        <p>This is due to their excellent service, and augue homero consectetuer in nam.
-                                            Eu quo laoreet propriae, malis exerci habemus has vocent persius eum ea.</p>
-                                    </div>
-                                    <div class="client_thumbnail">
-                                        <div class="client_img">
-                                            <img src="assets/images/testimonials/testimonial-1-img-1.png"
-                                                alt="testimonial1-img">
-                                        </div>
-                                        <div class="client_title">
-                                            <h4>Kevin Hardson</h4>
-                                            <p>Customer</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="testimonials_one_single_item">
-                                    <div class="text">
-                                        <p>This is due to their excellent service, and augue homero consectetuer in nam.
-                                            Eu quo laoreet propriae, malis exerci habemus has vocent persius eum ea.</p>
-                                    </div>
-                                    <div class="client_thumbnail">
-                                        <div class="client_img">
-                                            <img src="assets/images/testimonials/testimonial-1-img-1.png"
-                                                alt="testimonial1-img">
-                                        </div>
-                                        <div class="client_title">
-                                            <h4>Kevin Hardson</h4>
-                                            <p>Customer</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-
-        <!-- <section class="recent-project">
-            <div class="container">
-                <div class="block-title text-center">
-                    <p>explore projects</p>
-                    <h3>our Recent projects</h3>
-                    <div class="leaf">
-                        <img src="assets/images/resources/leaf.png" alt="">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xl-4 col-lg-4">
-                        <div class="recent_project_single wow fadeInUp" data-wow-delay="300ms">
-                            <div class="project_img_box">
-                                <img src="assets/images/project/recent-pro-img-1.jpg" alt="Recent Project Img">
-                                <div class="project_content">
-                                    <h3>organic<br>solutions</h3>
-                                </div>
-                                <div class="hover_box">
-                                    <a href="projects_detail.html"><span class="icon-left-arrow"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4">
-                        <div class="recent_project_single wow fadeInUp" data-wow-delay="600ms">
-                            <div class="project_img_box">
-                                <img src="assets/images/project/recent-pro-img-2.jpg" alt="Recent Project Img">
-                                <div class="project_content">
-                                    <h3>Harvest<br>Innovations</h3>
-                                </div>
-                                <div class="hover_box">
-                                    <a href="projects_detail.html"><span class="icon-left-arrow"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 wow fadeInUp" data-wow-delay="900ms">
-                        <div class="recent_project_single">
-                            <div class="project_img_box">
-                                <img src="assets/images/project/recent-pro-img-3.jpg" alt="Recent Project Img">
-                                <div class="project_content">
-                                    <h3>Agriculture<br>farming</h3>
-                                </div>
-                                <div class="hover_box">
-                                    <a href="projects_detail.html"><span class="icon-left-arrow"></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-
-        <!-- <section class="benefits">
-            <div class="benefits_bg" style="background-image: url(assets/images/resources/benifits_bg.png)"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-4">
-                        <div class="block-title text-left">
-                            <p>Our benefits</p>
-                            <h3>Agriculture & Eco<br>Farming</h3>
-                            <div class="leaf">
-                                <img src="assets/images/resources/leaf.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-8 d-flex">
-                        <div class="my-auto">
-                            <div class="benefits_text">
-                                <p>There are many variations of passages of available but the majority have suffered
-                                    alteration in some form, by injected humou or randomised words which don't look even
-                                    slightly believable. There are many variations of passages of available but the
-                                    majority have suffered alteration in some form, by injected humou or randomised
-                                    words which don't look even slightly believable.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="benefits_bottom_part">
-                    <div class="row">
-                        <div class="col-xl-3 col-lg-3 col-md-6">
-                            <div class="benefits_single wow fadeInUp" data-wow-delay="300ms">
-                                <div class="icon-box">
-                                    <span class="icon-tractor"></span>
-                                </div>
-                                <h3>We Use New technology</h3>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-3 col-md-6">
-                            <div class="benefits_single wow fadeInUp" data-wow-delay="600ms">
-                                <div class="icon-box">
-                                    <span class="icon-cart"></span>
-                                </div>
-                                <h3>professional farmers</h3>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-3 col-md-6">
-                            <div class="benefits_single wow fadeInUp" data-wow-delay="900ms">
-                                <div class="icon-box">
-                                    <span class="icon-watering-can"></span>
-                                </div>
-                                <h3>We're certified company</h3>
-                            </div>
-                        </div>
-                        <div class="col-xl-3 col-lg-3 col-md-6">
-                            <div class="benefits_single wow fadeInUp" data-wow-delay="1200ms">
-                                <div class="icon-box">
-                                    <span class="icon-log"></span>
-                                </div>
-                                <h3>We deliver everywhere</h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
 
         <section class="product-one">
             <div class="container">
