Menu fixed with link

--- a/index.html
+++ b/index.html
@@ -207,15 +207,15 @@
                             </div>
                             <div class="about1_icon_wrap">
                                 <div class="about1_icon_single">
-                                    <div class="about1_icon">
+                                    <!-- <div class="about1_icon">
                                         <span class="icon-harvest"></span>
-                                    </div>
+                                    </div> -->
                                     <p>Healthy cows, fresh and flavorful beef</p>
                                 </div>
                                 <div class="about1_icon_single">
-                                    <div class="about1_icon">
+                                    <!-- <div class="about1_icon">
                                         <span class="icon-temperature"></span>
-                                    </div>
+                                    </div> -->
                                     <p>Experience the taste of real, fresh milk</p>
                                 </div>
                             </div>
@@ -607,10 +607,9 @@
             <div class="side-menu__content">
                 <p><a href="mailto:earthasiaagro@gmail.com">earthasiaagro@gmail.com</a> <br> <a href="tel:+8801820820878">+880 1820-820878</a></p>
                 <div class="side-menu__social">
-                    <a href="#"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/"><i class="fab fa-facebook-square"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
                 </div>
             </div>
         </div>
