--- a/product.html
+++ b/product.html
@@ -123,7 +123,7 @@
                             </a>
                         </div>
                         <div class="main-nav__main-navigation mx-auto">
-                            <ul class="main-nav__navigation-box flex justify-center space-x-8">
+                            <ul class="main-nav__navigation-box flex md:flex-row flex-col justify-center md:space-x-8 space-x-0 space-y-4 md:space-y-0">
                                 <li class="dropdown">
                                     <a href="index.html" class="hover:text-green-600 transition-colors duration-300">Home</a>
                                 </li>
