--- a/gallery.html
+++ b/gallery.html
@@ -85,7 +85,7 @@
                             </a>
                         </div>
                         <div class="main-nav__main-navigation mx-auto">
-                            <ul class="main-nav__navigation-box flex justify-center space-x-8">
+                            <ul class="main-nav__navigation-box flex md:flex-row flex-col justify-center md:space-x-8 space-x-0 space-y-4 md:space-y-0">
                                 <li class="dropdown">
                                     <a href="index.html" class="hover:text-green-600 transition-colors duration-300">Home</a>
                                 </li>
@@ -260,7 +260,7 @@
                                 <a href="mailto:earthasiaagro@gmail.com">earthasiaagro@gmail.com</a><br>
                                 <a href="tel:+8801820820878">+880 1820-820878</a>
                                 <div class="site-footer__social">
-                                    <a href="#"><i class="fab fa-facebook-square"></i></a>
+                                    <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/"><i class="fab fa-facebook-square"></i></a>
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                     <a href="#"><i class="fab fa-instagram"></i></a>
                                 </div>
@@ -310,10 +310,9 @@
             <div class="side-menu__content">
                 <p><a href="mailto:earthasiaagro@gmail.com">earthasiaagro@gmail.com</a> <br> <a href="tel:+8801820820878">+880 1820-820878</a></p>
                 <div class="side-menu__social">
-                    <a href="#"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/"><i class="fab fa-facebook-square"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
                 </div>
             </div><!-- /.side-menu__content -->
         </div><!-- /.side-menu__block-inner -->
