--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                                 <a href="mailto:earthasiaagro@gmail.com">earthasiaagro@gmail.com</a><br>
                                 <a href="tel:+8801820820878">+880 1820-820878</a>
                                 <div class="site-footer__social">
-                                    <a href="#"><i class="fab fa-facebook-square"></i></a>
+                                    <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/"><i class="fab fa-facebook-square"></i></a>
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                     <a href="#"><i class="fab fa-instagram"></i></a>
                                     <a href="#"><i class="fab fa-dribbble"></i></a>
