--- a/index.html
+++ b/index.html
@@ -207,15 +207,15 @@
                             </div>
                             <div class="about1_icon_wrap">
                                 <div class="about1_icon_single">
-                                    <!-- <div class="about1_icon">
+                                    <div class="about1_icon">
                                         <span class="icon-harvest"></span>
-                                    </div> -->
+                                    </div>
                                     <p>Healthy cows, fresh and flavorful beef</p>
                                 </div>
                                 <div class="about1_icon_single">
-                                    <!-- <div class="about1_icon">
+                                    <div class="about1_icon">
                                         <span class="icon-temperature"></span>
-                                    </div> -->
+                                    </div>
                                     <p>Experience the taste of real, fresh milk</p>
                                 </div>
                             </div>
