Leaf in center now

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 <div class="block-title text-center">
                     <p>What we do</p>
                     <h3>Services We Offer</h3>
-                    <div class="leaf">
+                    <div class="leaf flex justify-center">
                         <img src="assets/images/resources/leaf.png" alt="">
                     </div>
                 </div>
