Nav menu links added

--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
                     <div class="topbar-one__right">
                         <div class="topbar-one__social">
                             <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank" class="hover:text-blue-500 transition-colors duration-300"><i class="fab fa-facebook-square"></i></a>
-                            <a href="#" class="hover:text-blue-500 transition-colors duration-300"><i class="fab fa-twitter"></i></a>
-                            <a href="#" class="hover:text-blue-500 transition-colors duration-300"><i class="fab fa-instagram"></i></a>
-                            <!-- <a href="#" class="hover:text-blue-500 transition-colors duration-300"><i class="fab fa-dribbble"></i></a> -->
+                            <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" class="hover:text-blue-500 transition-colors duration-300"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" class="hover:text-blue-500 transition-colors duration-300"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
@@ -208,13 +207,13 @@
                             <div class="about1_icon_wrap">
                                 <div class="about1_icon_single">
                                     <div class="about1_icon">
-                                        <span class="icon-harvest"></span>
+                                        <span class="icon"> <img src="assets/images//icon/beeficon.png" alt="Beef Icon"></span>
                                     </div>
                                     <p>Healthy cows, fresh and flavorful beef</p>
                                 </div>
                                 <div class="about1_icon_single">
                                     <div class="about1_icon">
-                                        <span class="icon-temperature"></span>
+                                        <span class="icon"> <img src="assets/images//icon/milkicon.png" alt="Milk Icon"></span>
                                     </div>
                                     <p>Experience the taste of real, fresh milk</p>
                                 </div>
@@ -492,8 +491,7 @@
                                 <h3>About</h3>
                             </div>
                             <div class="footer-widget_about_text">
-                                <p>Lorem ipsum dolor sit amet, adipiscing elit. Nulla placerat posuere dui. Pellentesque
-                                    venenatis sem non lacus ac auctor.</p>
+                                <p>We’d love to hear from you! Whether you have questions about our products, want to place an order, or just want to learn more about what we do feel free to reach out. At Earth Asia Agro, we’re always ready to help.</p>
                             </div>
                             <form>
                                 <div class="footer_input-box">
