--- a/contact.html
+++ b/contact.html
@@ -66,8 +66,8 @@
                     <div class="topbar-one__right">
                         <div class="topbar-one__social">
                             <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" target="_blank" class="hover:text-blue-500 transition-colors duration-300"><i class="fab fa-facebook-square"></i></a>
-                            <a href="#" class="hover:text-blue-500 transition-colors duration-300"><i class="fab fa-twitter"></i></a>
-                            <a href="#" class="hover:text-blue-500 transition-colors duration-300"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" class="hover:text-blue-500 transition-colors duration-300"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.facebook.com/people/Earth-Asia-Agro/61572538110659/" class="hover:text-blue-500 transition-colors duration-300"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
@@ -195,8 +195,7 @@
                                 <h3>About</h3>
                             </div>
                             <div class="footer-widget_about_text">
-                                <p>Lorem ipsum dolor sit amet, adipiscing elit. Nulla placerat posuere dui. Pellentesque
-                                    venenatis sem non lacus ac auctor.</p>
+                                <p>We’d love to hear from you! Whether you have questions about our products, want to place an order, or just want to learn more about what we do feel free to reach out. At Earth Asia Agro, we’re always ready to help.</p>
                             </div>
                             <form>
                                 <div class="footer_input-box">
